tests/rosetta/out/Zig/15-puzzle-game.error
zig build: exit status 1
/tmp/15-puzzle-game.zig:119:15: error: use of undeclared identifier 'int'
/tmp/15-puzzle-game.zig:163:19: error: use of undeclared identifier 'input'
